fix : text overflow & max height

--- a/src/components/TodoItem/style.module.scss
+++ b/src/components/TodoItem/style.module.scss
@@ -11,6 +11,7 @@
     font-size: 1.125rem; // 18px
     align-items: center;
     cursor: pointer;
+    overflow: hidden;
     .todoText {
       text-decoration: line-through;
       color: gray;
